[package]
name = "gputop"
version = "1.0.1"
edition = "2021"

[dependencies]
crossterm = "0.27"
ratatui = "0.24"
tokio = { version = "1.0", features = ["full"] }
sysinfo = "0.29"
nvml-wrapper = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
unicode-width = "0.1"
signal-hook = "0.3"
nix = "0.27"
regex = "1.5"
dirs = "5.0"

[features]
default = ["nvidia"]
nvidia = ["nvml-wrapper"]
amd = []
intel = []